# calculator-project

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
src/TestSimpleCalculator_2026_MB.egg-info/: PKG-INFO  SOURCES.txt
src/calculator/: __init__.py  simple_calculator.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_simple_calculator.py
